--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -1,8 +1,11 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_a_d_c__lib_8c}{ADC\+\_\+lib.\+c}} \\*Функции для работы с АЦП }{\pageref{_a_d_c__lib_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_a_m_p_8c}{AMP.\+c}} \\*Функции для вычисления амплитуды входного сигнала }{\pageref{_a_m_p_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_d_a_c__lib_8c}{DAC\+\_\+lib.\+c}} \\*Функции для работы с ЦАП }{\pageref{_d_a_c__lib_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_filter__lib_8c}{Filter\+\_\+lib.\+c}} \\*Функции для фильтрации паразитных частот, содержащихся во входном сигнале }{\pageref{_filter__lib_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{main_8c}{main.\+c}} \\*Main фунция }{\pageref{main_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_s_p_i__lib_8c}{SPI\+\_\+lib.\+c}} \\*Функции для работы с SPI }{\pageref{_s_p_i__lib_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_u_a_r_t__lib_8c}{UART\+\_\+lib.\+c}} \\*Функции для работы с USART }{\pageref{_u_a_r_t__lib_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_w_d_t__lib_8c}{WDT\+\_\+lib.\+c}} \\*Функции для работы со сторожевым таймером }{\pageref{_w_d_t__lib_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_w_d_t__lib_8c}{WDT\+\_\+lib.\+c}} \\*Функции для работы со сторожевым таймером IWDT }{\pageref{_w_d_t__lib_8c}}{}
 \end{DoxyCompactList}
