--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -211,8 +211,11 @@
 \input{files}
 \chapter{File Documentation}
 \input{_a_d_c__lib_8c}
+\input{_a_m_p_8c}
 \input{_d_a_c__lib_8c}
+\input{_filter__lib_8c}
 \input{main_8c}
+\input{_s_p_i__lib_8c}
 \input{_u_a_r_t__lib_8c}
 \input{_w_d_t__lib_8c}
 %--- End generated contents ---
