Documentation update: add font and LCD

--- a/Documentation/latex/_a_m_p_8c.tex
+++ b/Documentation/latex/_a_m_p_8c.tex
@@ -74,9 +74,11 @@ V1.\+0.\+0
 \end{DoxyParams}
 
 \begin{DoxyRetVals}{Return values}
-{\em Амплитуда} & средняя амплитуда сигнала в милливольтах\\
+{\em СКЗ} & средняя амплитуда сигнала в милливольтах\\
 \hline
 \end{DoxyRetVals}
+Рассчитывает среднеквадратичное значение амплитуды (аналогично мультиметру). СКЗ = Ап\texorpdfstring{$\ast$}{*}0,707 (Ап -\/ половина размаха т.\+е. полной амплитуды)
+
 Если define MOVE\+\_\+\+AVG, то амплитуда входного сигнала заменяется скользящей средней
 
 Если define SEND\+\_\+\+AVG, то результат отправляется по USART \Hypertarget{_a_m_p_8c_a34d5185ffc8f108f8315563b8190bbf1}\label{_a_m_p_8c_a34d5185ffc8f108f8315563b8190bbf1} 
