--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -214,6 +214,8 @@
 \input{_a_m_p_8c}
 \input{_d_a_c__lib_8c}
 \input{_filter__lib_8c}
+\input{font__lib_8c}
+\input{_l_c_d__lib_8c}
 \input{main_8c}
 \input{_s_p_i__lib_8c}
 \input{_u_a_r_t__lib_8c}
