--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -4,6 +4,8 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_a_m_p_8c}{AMP.\+c}} \\*Функции для вычисления амплитуды входного сигнала }{\pageref{_a_m_p_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_d_a_c__lib_8c}{DAC\+\_\+lib.\+c}} \\*Функции для работы с ЦАП }{\pageref{_d_a_c__lib_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_filter__lib_8c}{Filter\+\_\+lib.\+c}} \\*Функции для фильтрации паразитных частот, содержащихся во входном сигнале }{\pageref{_filter__lib_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{font__lib_8c}{font\+\_\+lib.\+c}} \\*Функции для работы со шрифтом }{\pageref{font__lib_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_l_c_d__lib_8c}{LCD\+\_\+lib.\+c}} \\*Функции для работы с LCD экраном }{\pageref{_l_c_d__lib_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{main_8c}{main.\+c}} \\*Main фунция }{\pageref{main_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_s_p_i__lib_8c}{SPI\+\_\+lib.\+c}} \\*Функции для работы с SPI }{\pageref{_s_p_i__lib_8c}}{}
 \item\contentsline{section}{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_u_a_r_t__lib_8c}{UART\+\_\+lib.\+c}} \\*Функции для работы с USART }{\pageref{_u_a_r_t__lib_8c}}{}
