--- a/Documentation/latex/_a_d_c__lib_8c.tex
+++ b/Documentation/latex/_a_d_c__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+ADC\+\_\+lib.c File Reference}
-\hypertarget{_a_d_c__lib_8c}{}\label{_a_d_c__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/ADC\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/ADC\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+ADC\+\_\+lib.c File Reference}
+\hypertarget{_a_d_c__lib_8c}{}\label{_a_d_c__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/ADC\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/ADC\_lib.c}}
 
 
 Функции для работы с АЦП  
