--- a/Documentation/latex/_a_m_p_8c.tex
+++ b/Documentation/latex/_a_m_p_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+AMP.c File Reference}
-\hypertarget{_a_m_p_8c}{}\label{_a_m_p_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/AMP.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/AMP.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+AMP.c File Reference}
+\hypertarget{_a_m_p_8c}{}\label{_a_m_p_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/AMP.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/AMP.c}}
 
 
 Функции для вычисления амплитуды входного сигнала  
@@ -120,7 +120,7 @@ V1.\+0.\+0
 \doxysubsubsection{\texorpdfstring{AverageVoltage}{AverageVoltage}}
 {\footnotesize\ttfamily double Average\+Voltage = 0}
 
-extern переменная, передаётся в LCD\+\_\+\+DQPSK\+\_\+\+Result() и LCD\+\_\+\+Freq\+\_\+\+Result() для отображения напряжения сигнала на LCD экране \Hypertarget{_a_m_p_8c_a338516706506c5857e22354cdb538f5a}\label{_a_m_p_8c_a338516706506c5857e22354cdb538f5a} 
+extern переменная, передаётся в \doxylink{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346}{LCD\+\_\+\+DQPSK\+\_\+\+Result()} и \doxylink{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2}{LCD\+\_\+\+Freq\+\_\+\+Result()} для отображения напряжения сигнала на LCD экране \Hypertarget{_a_m_p_8c_a338516706506c5857e22354cdb538f5a}\label{_a_m_p_8c_a338516706506c5857e22354cdb538f5a} 
 \index{AMP.c@{AMP.c}!avgCounter@{avgCounter}}
 \index{avgCounter@{avgCounter}!AMP.c@{AMP.c}}
 \doxysubsubsection{\texorpdfstring{avgCounter}{avgCounter}}
