--- a/Documentation/latex/_d_a_c__lib_8c.tex
+++ b/Documentation/latex/_d_a_c__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+DAC\+\_\+lib.c File Reference}
-\hypertarget{_d_a_c__lib_8c}{}\label{_d_a_c__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/DAC\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/DAC\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+DAC\+\_\+lib.c File Reference}
+\hypertarget{_d_a_c__lib_8c}{}\label{_d_a_c__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/DAC\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/DAC\_lib.c}}
 
 
 Функции для работы с ЦАП  
