--- a/Documentation/latex/_s_p_i__lib_8c.tex
+++ b/Documentation/latex/_s_p_i__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+SPI\+\_\+lib.c File Reference}
-\hypertarget{_s_p_i__lib_8c}{}\label{_s_p_i__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/SPI\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/SPI\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+SPI\+\_\+lib.c File Reference}
+\hypertarget{_s_p_i__lib_8c}{}\label{_s_p_i__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/SPI\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/SPI\_lib.c}}
 
 
 Функции для работы с SPI.  
