--- a/Documentation/latex/_u_a_r_t__lib_8c.tex
+++ b/Documentation/latex/_u_a_r_t__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+UART\+\_\+lib.c File Reference}
-\hypertarget{_u_a_r_t__lib_8c}{}\label{_u_a_r_t__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/UART\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/UART\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+UART\+\_\+lib.c File Reference}
+\hypertarget{_u_a_r_t__lib_8c}{}\label{_u_a_r_t__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/UART\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/UART\_lib.c}}
 
 
 Функции для работы с USART.  
