--- a/Documentation/latex/_w_d_t__lib_8c.tex
+++ b/Documentation/latex/_w_d_t__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+WDT\+\_\+lib.c File Reference}
-\hypertarget{_w_d_t__lib_8c}{}\label{_w_d_t__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/WDT\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/WDT\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+WDT\+\_\+lib.c File Reference}
+\hypertarget{_w_d_t__lib_8c}{}\label{_w_d_t__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/WDT\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/WDT\_lib.c}}
 
 
 Функции для работы со сторожевым таймером IWDT.  
@@ -49,13 +49,13 @@ V1.\+0.\+0
 
 Принудительная остановка работы программы. 
 
-\begin{DoxyVerb}       Устройство сигнализирует о принудительной остановке следующим образом:
-       - Включение светодиодов LED2, LED3
-       - Заполнение LCD экрана красным цветом
-       - Отправка сообщения SYSTEM FATAL ERROR по USART
-       - Установка High уровня на ЦАП
-\end{DoxyVerb}
- \Hypertarget{_w_d_t__lib_8c_a60778fdce755bfb3b9d709dd24e8f76f}\label{_w_d_t__lib_8c_a60778fdce755bfb3b9d709dd24e8f76f} 
+Устройство сигнализирует о принудительной остановке следующим образом\+:
+\begin{DoxyItemize}
+\item Включение светодиодов LED2, LED3
+\item Заполнение LCD экрана красным цветом
+\item Отправка сообщения SYSTEM FATAL ERROR по USART
+\item Установка High уровня на ЦАП 
+\end{DoxyItemize}\Hypertarget{_w_d_t__lib_8c_a60778fdce755bfb3b9d709dd24e8f76f}\label{_w_d_t__lib_8c_a60778fdce755bfb3b9d709dd24e8f76f} 
 \index{WDT\_lib.c@{WDT\_lib.c}!IWDT\_Delay@{IWDT\_Delay}}
 \index{IWDT\_Delay@{IWDT\_Delay}!WDT\_lib.c@{WDT\_lib.c}}
 \doxysubsubsection{\texorpdfstring{IWDT\_Delay()}{IWDT\_Delay()}}
