--- a/Documentation/latex/font__lib_8c.tex
+++ b/Documentation/latex/font__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/font\+\_\+lib.c File Reference}
-\hypertarget{font__lib_8c}{}\label{font__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/font\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/font\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/font\+\_\+lib.c File Reference}
+\hypertarget{font__lib_8c}{}\label{font__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/font\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/font\_lib.c}}
 
 
 Функции для работы со шрифтом  
