--- a/Documentation/latex/main_8c.tex
+++ b/Documentation/latex/main_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/main.c File Reference}
-\hypertarget{main_8c}{}\label{main_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/main.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/main.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/main.c File Reference}
+\hypertarget{main_8c}{}\label{main_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/main.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/main.c}}
 
 
 main фунция  
