--- a/Documentation/latex/_filter__lib_8c.tex
+++ b/Documentation/latex/_filter__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+Filter\+\_\+lib.c File Reference}
-\hypertarget{_filter__lib_8c}{}\label{_filter__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/Filter\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/Filter\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+Filter\+\_\+lib.c File Reference}
+\hypertarget{_filter__lib_8c}{}\label{_filter__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/Filter\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/Filter\_lib.c}}
 
 
 Функции для фильтрации паразитных частот, содержащихся во входном сигнале  
