--- a/Documentation/latex/_l_c_d__lib_8c.tex
+++ b/Documentation/latex/_l_c_d__lib_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/user/\+Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+LCD\+\_\+lib.c File Reference}
-\hypertarget{_l_c_d__lib_8c}{}\label{_l_c_d__lib_8c}\index{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/LCD\_lib.c@{C:/Users/user/Documents/Keil/DQPSK\_plus\_Freq/Source/LCD\_lib.c}}
+\doxysection{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\+LCD\+\_\+lib.c File Reference}
+\hypertarget{_l_c_d__lib_8c}{}\label{_l_c_d__lib_8c}\index{Documents/Keil/DQPSK\_plus\_Freq/Source/LCD\_lib.c@{Documents/Keil/DQPSK\_plus\_Freq/Source/LCD\_lib.c}}
 
 
 Функции для работы с LCD экраном  
@@ -14,18 +14,14 @@ void {\bfseries LCD\+\_\+\+Voltage\+\_\+\+Result} (uint16\+\_\+t, uint16\+\_\+t,
 \item 
 void \mbox{\hyperlink{_l_c_d__lib_8c_a5ef93ea663540adb55fb253fa41478c9}{LCD\+\_\+\+Start}} ()
 \begin{DoxyCompactList}\small\item\em Запускает LCD экран \end{DoxyCompactList}\item 
-\Hypertarget{_l_c_d__lib_8c_ab589cadffbb3a4300057f868e30a910f}\label{_l_c_d__lib_8c_ab589cadffbb3a4300057f868e30a910f} 
-void {\bfseries LCD\+\_\+\+DQPSK\+\_\+mode} ()
-\item 
-\Hypertarget{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346}\label{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346} 
-void {\bfseries LCD\+\_\+\+DQPSK\+\_\+\+Result} (uint16\+\_\+t code, uint16\+\_\+t speed, double AvgV)
-\item 
-\Hypertarget{_l_c_d__lib_8c_a84301f23dd4c003654d6c44781b4017e}\label{_l_c_d__lib_8c_a84301f23dd4c003654d6c44781b4017e} 
-void {\bfseries LCD\+\_\+\+Freq\+\_\+mode} ()
-\item 
-\Hypertarget{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2}\label{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2} 
-void {\bfseries LCD\+\_\+\+Freq\+\_\+\+Result} (uint16\+\_\+t freq, double AvgV)
-\item 
+void \mbox{\hyperlink{_l_c_d__lib_8c_ab589cadffbb3a4300057f868e30a910f}{LCD\+\_\+\+DQPSK\+\_\+mode}} ()
+\begin{DoxyCompactList}\small\item\em Переводит LCD экран в режим отображения АРСФ кодов \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346}{LCD\+\_\+\+DQPSK\+\_\+\+Result}} (uint16\+\_\+t code, uint16\+\_\+t speed, double AvgV)
+\begin{DoxyCompactList}\small\item\em Отображения результата декодирования АРСФ на LCD экране \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{_l_c_d__lib_8c_a84301f23dd4c003654d6c44781b4017e}{LCD\+\_\+\+Freq\+\_\+mode}} ()
+\begin{DoxyCompactList}\small\item\em Переводит LCD экран в режим отображения АРС кодов \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2}{LCD\+\_\+\+Freq\+\_\+\+Result}} (uint16\+\_\+t freq, double AvgV)
+\begin{DoxyCompactList}\small\item\em Отображения результата декодирования АРС на LCD экране \end{DoxyCompactList}\item 
 \Hypertarget{_l_c_d__lib_8c_ad4fcbc10f1d0f8b3738d929d33386ccc}\label{_l_c_d__lib_8c_ad4fcbc10f1d0f8b3738d929d33386ccc} 
 void {\bfseries LCD\+\_\+\+Show\+\_\+\+No\+\_\+\+Result} ()
 \item 
@@ -98,11 +94,11 @@ uint8\+\_\+t {\bfseries MSG\+\_\+\+DQPSK\+\_\+4} \mbox{[}4\mbox{]}\mbox{[}3\mbox
 \Hypertarget{_l_c_d__lib_8c_a1512ca89a90c98f801bf4929a7fa4a5e}\label{_l_c_d__lib_8c_a1512ca89a90c98f801bf4929a7fa4a5e} 
 uint8\+\_\+t {\bfseries MSG\+\_\+\+DQPSK\+\_\+5} \mbox{[}4\mbox{]}\mbox{[}3\mbox{]} = \{\"{}А\"{}, \"{}М\"{}, \"{}П\"{}, \"{}\+:\"{}\}
 \item 
-\Hypertarget{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58}\label{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58} 
-uint16\+\_\+t {\bfseries prev\+Code} = 0x999
+uint16\+\_\+t \mbox{\hyperlink{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58}{prev\+Code}} = 0x999
 \item 
-\Hypertarget{_l_c_d__lib_8c_ac24684fc351237f8c32cad80903246bc}\label{_l_c_d__lib_8c_ac24684fc351237f8c32cad80903246bc} 
-uint8\+\_\+t {\bfseries No\+Result\+State} = 0
+uint8\+\_\+t \mbox{\hyperlink{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}{No\+Result\+Counter}} = 2
+\item 
+uint8\+\_\+t \mbox{\hyperlink{_l_c_d__lib_8c_ac24684fc351237f8c32cad80903246bc}{No\+Result\+State}} = 0
 \item 
 \Hypertarget{_l_c_d__lib_8c_a8414fee3c222c507a19fcc0c45a78ce6}\label{_l_c_d__lib_8c_a8414fee3c222c507a19fcc0c45a78ce6} 
 uint8\+\_\+t {\bfseries MSG\+\_\+\+Freq\+\_\+1} \mbox{[}3\mbox{]}\mbox{[}3\mbox{]} = \{\"{}А\"{}, \"{}Р\"{}, \"{}С\"{}\}
@@ -133,7 +129,67 @@ V1.\+0.\+0
 
 
 \doxysubsection{Function Documentation}
-\Hypertarget{_l_c_d__lib_8c_a5ef93ea663540adb55fb253fa41478c9}\label{_l_c_d__lib_8c_a5ef93ea663540adb55fb253fa41478c9} 
+\Hypertarget{_l_c_d__lib_8c_ab589cadffbb3a4300057f868e30a910f}\label{_l_c_d__lib_8c_ab589cadffbb3a4300057f868e30a910f} 
+\index{LCD\_lib.c@{LCD\_lib.c}!LCD\_DQPSK\_mode@{LCD\_DQPSK\_mode}}
+\index{LCD\_DQPSK\_mode@{LCD\_DQPSK\_mode}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{LCD\_DQPSK\_mode()}{LCD\_DQPSK\_mode()}}
+{\footnotesize\ttfamily void LCD\+\_\+\+DQPSK\+\_\+mode (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Переводит LCD экран в режим отображения АРСФ кодов 
+
+Закрашивает экран в белый, выводит на экран обозначение режима работы (MSG\+\_\+\+DQPSK\+\_\+1) и поля для отображения результатов АРСФ декодирования (MSG\+\_\+\+DQPSK\+\_\+2, MSG\+\_\+\+DQPSK\+\_\+3, MSG\+\_\+\+DQPSK\+\_\+4, MSG\+\_\+\+DQPSK\+\_\+5). Также сбрасывает счётчик \doxylink{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}{No\+Result\+Counter} таймера TIM4. \Hypertarget{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346}\label{_l_c_d__lib_8c_a67d65e7546dc387e220507035c7c4346} 
+\index{LCD\_lib.c@{LCD\_lib.c}!LCD\_DQPSK\_Result@{LCD\_DQPSK\_Result}}
+\index{LCD\_DQPSK\_Result@{LCD\_DQPSK\_Result}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{LCD\_DQPSK\_Result()}{LCD\_DQPSK\_Result()}}
+{\footnotesize\ttfamily void LCD\+\_\+\+DQPSK\+\_\+\+Result (\begin{DoxyParamCaption}\item[{uint16\+\_\+t}]{code,  }\item[{uint16\+\_\+t}]{speed,  }\item[{double}]{AvgV }\end{DoxyParamCaption})}
+
+
+
+Отображения результата декодирования АРСФ на LCD экране 
+
+
+\begin{DoxyParams}{Parameters}
+{\em code} & декодированный hex код \\
+\hline
+{\em speed} & разрешённая на участке скорость в формате десятеричного числа\mbox{[}XXYY\mbox{]}, где XX -\/ разрешенная скорость на КРЦ, YY -\/ разрешенная скорость на СРЦ \\
+\hline
+{\em AvgV} & средняя амплитуда принятого сигнала\\
+\hline
+\end{DoxyParams}
+Если code код равен \doxylink{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58}{prev\+Code}, то выводит только AvgV (предыдущие показания code, speed остаются на экране).
+
+Также при каждом вызове обновляет счетчик \doxylink{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}{No\+Result\+Counter} \Hypertarget{_l_c_d__lib_8c_a84301f23dd4c003654d6c44781b4017e}\label{_l_c_d__lib_8c_a84301f23dd4c003654d6c44781b4017e} 
+\index{LCD\_lib.c@{LCD\_lib.c}!LCD\_Freq\_mode@{LCD\_Freq\_mode}}
+\index{LCD\_Freq\_mode@{LCD\_Freq\_mode}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{LCD\_Freq\_mode()}{LCD\_Freq\_mode()}}
+{\footnotesize\ttfamily void LCD\+\_\+\+Freq\+\_\+mode (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Переводит LCD экран в режим отображения АРС кодов 
+
+Закрашивает экран в белый, выводит на экран обозначение режима работы (MSG\+\_\+\+Freq\+\_\+1) и поля для отображения результатов АРС декодирования (MSG\+\_\+\+Freq\+\_\+2, MSG\+\_\+\+Freq\+\_\+3, MSG\+\_\+\+Freq\+\_\+6). Также сбрасывает счётчик \doxylink{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}{No\+Result\+Counter} таймера TIM4. \Hypertarget{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2}\label{_l_c_d__lib_8c_a9d046a321b80f763b5cdf78b26c0fbe2} 
+\index{LCD\_lib.c@{LCD\_lib.c}!LCD\_Freq\_Result@{LCD\_Freq\_Result}}
+\index{LCD\_Freq\_Result@{LCD\_Freq\_Result}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{LCD\_Freq\_Result()}{LCD\_Freq\_Result()}}
+{\footnotesize\ttfamily void LCD\+\_\+\+Freq\+\_\+\+Result (\begin{DoxyParamCaption}\item[{uint16\+\_\+t}]{freq,  }\item[{double}]{AvgV }\end{DoxyParamCaption})}
+
+
+
+Отображения результата декодирования АРС на LCD экране 
+
+
+\begin{DoxyParams}{Parameters}
+{\em freq} & доминирующая частота, полученная в результате спектрального анализа \\
+\hline
+{\em AvgV} & средняя амплитуда принятого сигнала\\
+\hline
+\end{DoxyParams}
+Если code код равен \doxylink{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58}{prev\+Code}, то выводит только AvgV (предыдущие показания freq остаются на экране).
+
+Также при каждом вызове обновляет счетчик \doxylink{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}{No\+Result\+Counter} \Hypertarget{_l_c_d__lib_8c_a5ef93ea663540adb55fb253fa41478c9}\label{_l_c_d__lib_8c_a5ef93ea663540adb55fb253fa41478c9} 
 \index{LCD\_lib.c@{LCD\_lib.c}!LCD\_Start@{LCD\_Start}}
 \index{LCD\_Start@{LCD\_Start}!LCD\_lib.c@{LCD\_lib.c}}
 \doxysubsubsection{\texorpdfstring{LCD\_Start()}{LCD\_Start()}}
@@ -144,3 +200,24 @@ V1.\+0.\+0
 Запускает LCD экран 
 
 Вызывает LCD\+\_\+\+GPIO\+\_\+\+Config(), init\+LCD(), закрашивает экран в белый, выводит на экран стартовое сообщение (MSG\+\_\+\+Start\+\_\+1, MSG\+\_\+\+Start\+\_\+2) 
+
+\doxysubsection{Variable Documentation}
+\Hypertarget{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2}\label{_l_c_d__lib_8c_a0efe09d8a193aa45418e4c33c4f420c2} 
+\index{LCD\_lib.c@{LCD\_lib.c}!NoResultCounter@{NoResultCounter}}
+\index{NoResultCounter@{NoResultCounter}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{NoResultCounter}{NoResultCounter}}
+{\footnotesize\ttfamily uint8\+\_\+t No\+Result\+Counter = 2}
+
+Зависит от количества безрезультатных (сигнал не удалось декодировать) приёмов сигнала подряд. extern переменная, уменьшается в TMR4\+\_\+\+Event\+Callback() с периодом 500ms. Если No\+Result\+Counter = 0 (т.\+е. в течении \texorpdfstring{$\sim$}{\string~}1 секунды не произошло удачного декодирования), то вызывается LCD\+\_\+\+Show\+\_\+\+No\+\_\+\+Result() \Hypertarget{_l_c_d__lib_8c_ac24684fc351237f8c32cad80903246bc}\label{_l_c_d__lib_8c_ac24684fc351237f8c32cad80903246bc} 
+\index{LCD\_lib.c@{LCD\_lib.c}!NoResultState@{NoResultState}}
+\index{NoResultState@{NoResultState}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{NoResultState}{NoResultState}}
+{\footnotesize\ttfamily uint8\+\_\+t No\+Result\+State = 0}
+
+Индикация отсутсвия отображения кода на LCD экране. 0 -\/ код на экране примутсвует, 1 -\/ кода нет \Hypertarget{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58}\label{_l_c_d__lib_8c_a426b1bbba3f5653febf394936df25a58} 
+\index{LCD\_lib.c@{LCD\_lib.c}!prevCode@{prevCode}}
+\index{prevCode@{prevCode}!LCD\_lib.c@{LCD\_lib.c}}
+\doxysubsubsection{\texorpdfstring{prevCode}{prevCode}}
+{\footnotesize\ttfamily uint16\+\_\+t prev\+Code = 0x999}
+
+Содержит значение предыдущего принятого кода. 0x999 -\/ невозможное значение, поэтому является default 
